--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -41,7 +41,7 @@
                         <li class="active"><a href="#about">Table1</a></li>
                         <li><a href="#contact">Table2</a></li>
                         <li><a href="#">Table3</a></li>
-                        <li class="dropdown">
+<!--                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="#">Action</a></li>
@@ -52,7 +52,7 @@
                                 <li><a href="#">Separated link</a></li>
                                 <li><a href="#">One more separated link</a></li>
                             </ul>
-                        </li>
+                        </li> -->
                     </ul><!-- nav navbar-nav -->
 
                     <!--/.nav-collapse 
