Minor change in layout.

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -200,19 +200,19 @@
                             <img alt="Eric Njanga" class="avatar" data-user="4621307" height="20" src="https://avatars2.githubusercontent.com/u/4621307?v=2&amp;s=40" width="20">
                         </a>  
                         <strong>
-                          <a href="https://github.com/ericnjanga/HTML-responsive-tables" target="_blank">Eric Njanga</a>
+                          <a href="https://github.com/ericnjanga" target="_blank">Eric Njanga</a>
                         </strong> 
                     </div> 
 
 
                     <ul class="list-inline col-sm-6 col-md-6 text-right">
                         <li>
-                            <a href="https://github.com/ericnjanga/HTML-responsive-tables" target="_blank">
+                            <a href="http://ericnjanga.com" target="_blank">
                                 <i class="fa fa-male"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/ericnjanga/HTML-responsive-tables" target="_blank">
+                            <a href="https://github.com/ericnjanga" target="_blank">
                                 <i class="fa fa-github-alt"></i>
                             </a>
                         </li>
